@@ -2,7 +2,6 @@ package ee.bitweb.core.utils;
 
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import ch.qos.logback.classic.Level;
 import ch.qos.logback.classic.spi.ILoggingEvent;
@@ -28,14 +27,14 @@ public class MemoryAppender extends ListAppender<ILoggingEvent> {
     public List<ILoggingEvent> search(String string) {
         return this.list.stream()
                 .filter(event -> event.toString().contains(string))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<ILoggingEvent> search(String string, Level level) {
         return this.list.stream()
                 .filter(event -> event.toString().contains(string)
                         && event.getLevel().equals(level))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public int getSize() {
